# multi-agent-intelligent-warehouse

./: .editorconfig  .env.example  .gitignore  .releaserc.json  CHANGELOG.md  CICD_ANALYSIS_REPORT.md  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  COPILOT_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DYNAMIC_DATA_REVIEW_SUMMARY.md  Dockerfile  FORECASTING_ENHANCEMENT_PLAN.md  LESSONS_LEARNED.md  LICENSE-3rd-party.txt  PHASE2_COMPLETION_REPORT.md  PHASE3_TESTING_RESULTS.md  PHASE4_DEPLOYMENT_PLAN.md  QUICK_START.md  README.md  REORDER_RECOMMENDATION_EXPLAINER.md  REQUIREMENTS_AUDIT_REPORT.md  ROLLBACK_PLAN.md  RUN_LOCAL.sh  SECURITY.md  SERVER_STARTUP_FIX.md  UNNECESSARY_FILES.md  document_statuses.json  historical_demand_summary.json  package.json  phase1_phase2_forecasts.json  pipeline_test_results_20251010_080352.json  pipeline_test_results_20251010_080513.json  pipeline_test_results_20251010_080614.json  pipeline_test_results_20251010_080748.json  pyproject.toml  rapids_gpu_forecasts.json  requirements.txt  setup_nvidia_api.py  (+4 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh
.github/: copilot-instructions.md  dependabot.yml  release_template.md
.github/ISSUE_TEMPLATE/: dependency-update.md
.github/workflows/: main.yml  sonarqube.yml
chain_server/: app.py
chain_server/graphs/: mcp_integrated_planner_graph.py  mcp_planner_graph.py  planner_graph.py
chain_server/routers/: auth.py  chat.py  document.py  mcp.py
docs/: DEVELOPMENT.md  PERFORMANCE_OPTIMIZATIONS.md  SOFTWARE_INVENTORY.md  TROUBLESHOOTING_LOGIN_401.md  dependabot-configuration.md  mcp-testing-enhancements.md  secrets.md
docs/api/: README.md
docs/architecture/: CHANGELOG_AUTOMATION.md  MCP_CUSTOM_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION_STATUS.md  PHASE2_PERFORMANCE_PLAN.md  database-migrations.md  guardrails-implementation.md  mcp-api-reference.md  mcp-complete-implementation-summary.md  mcp-deployment-guide.md  mcp-gpu-acceleration-guide.md  mcp-integration.md  mcp-migration-guide.md  mcp-phase3-achievements.md  project-achievements-summary.md
docs/deployment/: DEPLOYMENT_ANALYSIS.md  README.md
docs/forecasting/: PHASE1_PHASE2_COMPLETE.md  PHASE3_4_5_COMPLETE.md  RAPIDS_IMPLEMENTATION_PLAN.md  RAPIDS_SETUP.md  README.md  REORDER_RECOMMENDATION_EXPLAINER.md
docs/security/: AXIOS_SSRF_PROTECTION.md  NSPECT_CVE-2025-64439_MITIGATION.md  SECURITY_SCAN_RESPONSE_PYJWT.md  VULNERABILITY_MITIGATIONS.md
inventory_retriever/: __init__.py
inventory_retriever/caching/: README.md
inventory_retriever/response_quality/: __init__.py  response_enhancer.py  response_validator.py  ux_analytics.py
inventory_retriever/structured/: sql_retriever.py
notebooks/setup/: complete_setup_guide.ipynb  test_notebook.py
scripts/: README.md  SCRIPTS_FOLDER_ANALYSIS.md  phase1_phase2_forecasting_agent.py  phase3_advanced_forecasting.py  view_logs.sh
scripts/data/: generate_all_sku_forecasts.py  generate_equipment_telemetry.py  generate_historical_demand.py  generate_synthetic_data.py  quick_demo_data.py  run_data_generation.sh  run_quick_demo.sh
scripts/forecasting/: phase1_phase2_forecasting_agent.py  phase1_phase2_summary.py  phase3_advanced_forecasting.py  rapids_forecasting_agent.py  rapids_gpu_forecasting.py
scripts/security/: dependency_blocklist.py
scripts/setup/: create_default_users.py  create_model_tracking_tables.sql  install_rapids.sh  setup_monitoring.sh  setup_rapids_gpu.sh
scripts/testing/: test_chat_functionality.py  test_chat_router.py  test_rapids_forecasting.py
scripts/tools/: audit_requirements.py  benchmark_gpu_milvus.py  comprehensive_license_audit.py  debug_chat_response.py  generate_license_3rd_party.py  generate_package_inventory_excel.py  generate_software_inventory.py  gpu_demo.py  mcp_gpu_integration_demo.py
src/api/: app.py
src/memory/: memory_manager.py
src/retrieval/: __init__.py  enhanced_hybrid_retriever.py  (+5 more)
tests/: API_ENDPOINTS_ASSESSMENT.md  BUSINESS_INTELLIGENCE_TAB_VERIFICATION.md  DOCUMENTS_FIXES_SUMMARY.md  DOCUMENTS_NEMO_PIPELINE_VERIFICATION.md  DOCUMENTS_PAGE_ASSESSMENT.md  FORECASTING_SUMMARY_CARDS_ASSESSMENT.md  FORECASTING_SUMMARY_CARDS_VERIFICATION.md  REASONING_INTEGRATION_SUMMARY.md  TRAINING_HISTORY_DURATION_ASSESSMENT.md  conftest.py  test_documents_page.py  test_reasoning_integration.py
(+338 files in other folders)
