[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-operational-assistant"
version = "1.0.0"
description = "NVIDIA Blueprint–aligned multi-agent assistant for warehouse operations"
authors = [
    {name = "T-DevH", email = "dev@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.120.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "langchain>=0.1.11",  # Security: CVE-2024-28088 fixed in 0.1.11+. Note: We use langchain-core>=1.2.6 directly (includes CVE-2025-68664 fix)
    "langgraph>=1.0.5",  # Security: CVE-2025-8709 fixed in 1.0.5+ (includes fix). Note: We use in-memory state (no SQLite checkpoint) as additional defense
    "langgraph-checkpoint>=3.0.0",  # Security: CVE-2025-64439 (RCE in JsonPlusSerializer) fixed in 3.0.0+. Note: We use in-memory state (no checkpoint backend), but pinning secure version for transitive dependencies
    "psycopg[binary]>=3.1.0",
    "redis>=5.0.0",
    "pymilvus>=2.3.0",
    "prometheus-client>=0.19.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pre-commit>=3.4.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["chain_server", "inventory_retriever", "memory_retriever", "guardrails"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".mypy_cache",
    "node_modules",
    "ui/web/node_modules",
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pymilvus.*",
    "redis.*",
    "psycopg.*",
    "langchain.*",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "mcp: marks tests as MCP-related tests",
    "stress: marks tests as stress tests",
    "load: marks tests as load tests",
    "deployment: marks tests as deployment tests",
    "performance: marks tests as performance tests",
    "scalability: marks tests as scalability tests",
    "endurance: marks tests as endurance tests",
]

[tool.coverage.run]
source = ["chain_server", "inventory_retriever", "memory_retriever", "guardrails"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/node_modules/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
